# Slicer-AirwaySegmentation

./: CMakeLists.txt  README
AirwaySegmentation/: AirwaySegmentation.py  CMakeLists.txt
AirwaySegmentationCLI/: AirwaySegmentationCLI.cxx  AirwaySegmentationCLI.cxx~  AirwaySegmentationCLI.xml  CMakeLists.txt  itkConnectedThresholdImageFilterModified.h  itkConnectedThresholdImageFilterModified.hxx
AirwaySegmentationCLI/Data/Input/: CTChest.nhdr
AirwaySegmentationCLI/Testing/Cxx/: CMakeLists.txt
